# smhw-api

./: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.md
examples/calendar/: demo.py
examples/complete_quiz/: demo.py
examples/complete_task/: demo.py
examples/debug/: demo.py
examples/get_all_employees/: demo.py
examples/get_behaviour/: demo.py
examples/get_detailed_attendance/: demo.py
examples/get_notifications/: demo.py
examples/get_quiz_grade/: demo.py
examples/get_todo/: demo.py
examples/login/: demo.py  demo2.py
examples/timetable/: demo.py
src/smhw_api/: __init__.py  api.py  exceptions.py  objects.py  requirements.txt  skeleton.py
src/smhw_api/objects/: __init__.py  calendar.py  comments.py  insights.py  praise.py  school.py  subjects.py  tasks.py  timetable.py  todo.py  tools.py  types.py  user.py  users.py
tests/: conftest.py  test_skeleton.py
